# Paralela-Proyecto1

./: CMakeLists.txt  main.cpp
